# bthome-presence

./: .editorconfig  .markdownlint.yaml  license.md  readme.md
.github/workflows/: ci.yaml
firmware/: .gitignore  Cargo.toml  build.rs  memory-nrf52810.x  memory-nrf52832.x  readme.md
firmware/.cargo/: config.toml
firmware/docs/bthome-notes/: notes.md
firmware/nrf-soft-device/: readme.md
firmware/nrf-soft-device/hex_tools/: bin2hex.py  hex2dump.py  hexinfo.py  readme.md
firmware/src/: common.rs
firmware/src/util/: encoding.rs
hardware/: readme.md
hardware/DUOWEISI/firmware/: backup.hex  readme.md
hardware/DUOWEISI/power/: readme.md  test01.ppk2  test02.ppk2  test03.ppk2
hardware/DUOWEISI/programmmer/: duoweisi-528332_LS2DH.step  duoweisi-528332_programmer-base.step  duoweisi-528332_programmer-bottom-cap.step  duoweisi-528332_programmer-retention-sled.step  duoweisi-528332_programmer.3mf  readme.md
hardware/airtag-adapter/: DUOWEISI_NRF52832_LS2DH_airtag-adapter.step  HolyIoT_21014_airtag-adapter.step  readme.md
hardware/holy-iot/21011/: 21011-beacon-V1.0.DXF  backup.hex
hardware/holy-iot/21014/: backup.hex
hardware/holy-iot/22040/: backup.hex  backup.hex.strings
hardware/holy-iot/22040/programmer/: dock.step  readme.md  sled.step
