[package]
authors = ["Karl Quinsland"]
edition = "2021"
name = "bt-home-presence"
version = "0.1.0"
# Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International 
license = "CC BY-NC-SA 4.0"

[features]

# Dummy feature to allow for including/omitting the softdevice binary in final binary
with-softdevice = []

nrf52810 = [
  "dep:nrf-softdevice-s112",
  "embassy-nrf/nrf52810",
  "nrf-softdevice/nrf52810",
  "nrf-softdevice/s112",
]

nrf52832 = [
  "dep:nrf-softdevice-s112",
  "embassy-nrf/nrf52832",
  "nrf-softdevice/nrf52832",
  "nrf-softdevice/s112",
]

[dependencies]
embassy-sync = { version = "0.5.0", features = ["defmt"] }

embassy-executor = { version = "0.5.0", features = [
  # defaults to 4096
  # "task-arena-size-4096",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }

embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

embassy-nrf = { version = "0.1.0", features = [
  "defmt",
  "gpiote",
  "time-driver-rtc1",
  # "time",
  # "unstable-pac",
] }

nrf-softdevice = { version = "0.1.0", features = [
  "defmt",
  "ble-peripheral",
  "critical-section-impl",
] }

nrf-softdevice-s112 = { version = "0.1.2", optional = true }

embassy-embedded-hal = { version = "0.1.0" }

defmt = "0.3.5"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.7", features = [
  # Required when not using soft-device
  # TODO: figure out how to gate this behind feature flags?
  # "critical-section-single-core",
  # "inline-asm",
] }

cortex-m-rt = "0.7.3"

panic-probe = { version = "0.3.1", features = ["print-defmt"] }

futures = { version = "0.3.29", default-features = false }


# Defaults to std, but we're using no_std
arrayvec = { version = "0.7.4", default-features = false }

# After encountering some memory related issues, discussion on the matrix chat
# pointed out that there's really no reason to use anything but "release" on embedded.
# There is no way to set `cargo run` to default to --release, unfortunately :(
[profile.release]
# better optimizations
codegen-units = 1
lto = true
# symbols are nice and they don't increase the size on Flash
debug = true

[patch.crates-io]
# ❯ git ls-remote https://github.com/embassy-rs/embassy.git HEAD
##
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "ad7d739ddcc0e888574ba36a294b41d560927c5d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ad7d739ddcc0e888574ba36a294b41d560927c5d" }

embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ad7d739ddcc0e888574ba36a294b41d560927c5d" }

embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "ad7d739ddcc0e888574ba36a294b41d560927c5d" }

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "ad7d739ddcc0e888574ba36a294b41d560927c5d" }
